2007-02-02  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (wrap-gobject-class!): Add a type
	alias for classes; fixes class parameters to wrapped functions.

	* gnome/gw/support/defs.scm (load-defs): Support new parameter,
	`leave-guile-mode'. Takes one boolean argument, defaults to #t. If
	#t, g-wrap will leave guile mode when the function is called.
	Requires new g-wrap.

	* gnome/gobject/gvalue.scm (initialize): Untabify.
	(gtype-instance:write): Untabify. Use gflags->symbol-list to write
	flags.
	(find-enum, genum->symbol, genum->name, genum->value): Untabify.
	(gflags->element-list): Untabify; fix a bug so that 0x3 does not
	match 0x1.
	(gflags->symbol-list, gflags->name-list, gflags->value-list):
	Untabify.

	* gnome/gobject/gtype.c (scm_init_gnome_gobject_types): Don't
	install a log handler; not only does the scm_throw corrupt
	libraries' internal state, it is dangerous because now it is
	likely that we are not in guile mode.

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gclosure.c ("%scm-gclosure-marshal"): Enter guile
	via scm_with_guile when invoking a closure; along with a patch I'm
	mailing to the g-wrap list this makes callbacks from other threads
	work.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.90.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* test-suite/gw-test-gobject-spec.scm (gw-test-gobject-spec): 
	* test-suite/gw-test-glib-spec.scm (gw-test-glib-spec): Fix up
	includes.

	* test-suite/gobject.test ("basic values"): Fix the check for
	out-of-range errors, using the "value out of range" variant
	instead of "argument N out of range".

	* test-suite/Makefile.am (libgw_guile_test_glib_la_LIBADD): Link
	to GLib.

	* gnome/gw/support/gobject.scm (wrap-value-cg): Use the
	scm_c_gtype_instance_unref generic function instead of
	g_object_unref, so that we can support other classed objects.
