@@ -1,3 +1,8 @@
+2007-04-15  Andreas Rottmann  <rotty@gkar.rotty.yi.org>
+
+	* gnome/gw/glib-support.c: Support for mainloop signal handling in
+	Guile 1.8 via SCM_TICK.
+
 2007-02-02  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/support/gobject.scm (wrap-gobject-class!): Add a type
